// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcTableFilter should hide the clear filters button if there isn't any preselected filter 1`] = `
<section
  class="ec-table-filter"
  data-test="ec-table-filter"
>
  <div
    class="ec-sync-multiple-values-filter ec-table-filter__filter-item"
    data-test="ec-table-filter__filter-item ec-table-filter__filter-item-0"
  >
    <div
      class="ec-filter-popover"
      data-test="ec-sync-multiple-values-filter__trigger"
    >
      <ec-stub
        data-test="ec-stub ec-popover-stub"
        offset="0, 8"
        placement="bottom"
        popper-options="[object Object]"
      >
        <div
          class="ec-filter-popover__trigger"
          data-test="ec-filter-popover__trigger"
        >
          <button
            class="ec-filter-popover__label"
            data-test="ec-filter-popover__label"
            title="Payment status"
            type="button"
          >
            Payment status
          </button>
           
          <!---->
           
          <svg
            class="ec-filter-popover__icon ec-icon ec-icon--interactive"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-chevron-down"
            />
          </svg>
        </div>
          
        <div
          class="ec-filter-popover__filter-content"
        >
          <div
            class="ec-multiple-values-selection"
            data-test="ec-multiple-values-selection"
          >
            <!---->
             
            <div>
              <!---->
                
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-1"
                    type="checkbox"
                  />
                   
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                    >
                      <!---->
                    </span>
                     
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-1"
                      title="Paid"
                    >
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <!---->
                         
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Paid
                        </span>
                      </div>
                    </label>
                  </div>
                   
                  <!---->
                </div>
              </li>
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-2"
                    type="checkbox"
                  />
                   
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                    >
                      <!---->
                    </span>
                     
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-2"
                      title="Cancelled"
                    >
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <!---->
                         
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Cancelled
                        </span>
                      </div>
                    </label>
                  </div>
                   
                  <!---->
                </div>
              </li>
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-3"
                    type="checkbox"
                  />
                   
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                    >
                      <!---->
                    </span>
                     
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-3"
                      title="Overdue"
                    >
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <!---->
                         
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Overdue
                        </span>
                      </div>
                    </label>
                  </div>
                   
                  <!---->
                </div>
              </li>
            </div>
          </div>
        </div>
      </ec-stub>
    </div>
  </div>
  <div
    class="ec-sync-multiple-values-filter ec-table-filter__filter-item"
    data-test="ec-table-filter__filter-item ec-table-filter__filter-item-1"
  >
    <div
      class="ec-filter-popover"
      data-test="ec-sync-multiple-values-filter__trigger"
    >
      <ec-stub
        data-test="ec-stub ec-popover-stub"
        offset="0, 8"
        placement="bottom"
        popper-options="[object Object]"
      >
        <div
          class="ec-filter-popover__trigger"
          data-test="ec-filter-popover__trigger"
        >
          <button
            class="ec-filter-popover__label"
            data-test="ec-filter-popover__label"
            title="Fee type"
            type="button"
          >
            Fee type
          </button>
           
          <!---->
           
          <svg
            class="ec-filter-popover__icon ec-icon ec-icon--interactive"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-chevron-down"
            />
          </svg>
        </div>
          
        <div
          class="ec-filter-popover__filter-content"
        >
          <div
            class="ec-multiple-values-selection"
            data-test="ec-multiple-values-selection"
          >
            <!---->
             
            <div>
              <!---->
                
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-4"
                    type="checkbox"
                  />
                   
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                    >
                      <!---->
                    </span>
                     
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-4"
                      title="Invoiced"
                    >
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <!---->
                         
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Invoiced
                        </span>
                      </div>
                    </label>
                  </div>
                   
                  <!---->
                </div>
              </li>
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-5"
                    type="checkbox"
                  />
                   
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                    >
                      <!---->
                    </span>
                     
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-5"
                      title="Other type"
                    >
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <!---->
                         
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Other type
                        </span>
                      </div>
                    </label>
                  </div>
                   
                  <!---->
                </div>
              </li>
            </div>
          </div>
        </div>
      </ec-stub>
    </div>
  </div>
  <div
    class="ec-filter-popover ec-table-filter__filter-item"
    data-test="ec-table-filter__filter-item ec-table-filter__filter-item-2"
  >
    <ec-stub
      data-test="ec-stub ec-popover-stub"
      offset="0, 8"
      placement="bottom"
      popper-options="[object Object]"
    >
      <div
        class="ec-filter-popover__trigger"
        data-test="ec-filter-popover__trigger"
      >
        <button
          class="ec-filter-popover__label"
          data-test="ec-filter-popover__label"
          title="Due date"
          type="button"
        >
          Due date
        </button>
         
        <!---->
         
        <svg
          class="ec-filter-popover__icon ec-icon ec-icon--interactive"
          height="16"
          width="16"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </div>
        
      <div
        class="ec-filter-popover__filter-content"
      >
        <div
          class="ec-date-range-filter"
          data-test="ec-date-range-filter"
        >
          <div
            class="ec-date-range-filter__inputs-wrapper"
          >
            <div
              class="ec-input-field ec-date-range-filter__from-input"
              data-test="ec-input-field"
            >
              <label
                class="ec-input-field__label"
                data-test="ec-input-field__label"
                for="ec-input-field-6"
              >
                <span
                  class="ec-input-field__label-text"
                  data-test="ec-input-field__label-text"
                >
                  From
                  <!---->
                </span>
                 
                <!---->
              </label>
               
              <input
                class="ec-input-field__input"
                data-test="ec-date-range-filter__from-input ec-input-field__input"
                id="ec-input-field-6"
                placeholder="dd/mm/yyyy"
                type="date"
              />
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="ec-input-field ec-date-range-filter__to-input"
              data-test="ec-input-field"
            >
              <label
                class="ec-input-field__label"
                data-test="ec-input-field__label"
                for="ec-input-field-7"
              >
                <span
                  class="ec-input-field__label-text"
                  data-test="ec-input-field__label-text"
                >
                  To
                  <!---->
                </span>
                 
                <!---->
              </label>
               
              <input
                class="ec-input-field__input"
                data-test="ec-date-range-filter__to-input ec-input-field__input"
                id="ec-input-field-7"
                placeholder="dd/mm/yyyy"
                type="date"
              />
               
              <!---->
               
              <!---->
            </div>
          </div>
           
          <!---->
           
          <button
            class="ec-date-range-filter__clear-button"
            data-test="ec-date-range-filter__clear-button"
            disabled="disabled"
            type="button"
          >
            Clear dates
          </button>
        </div>
      </div>
    </ec-stub>
  </div>
   
  <!---->
</section>
`;

exports[`EcTableFilter should hide the clear filters button when the user deselect the all the filters manually 1`] = `
<section
  class="ec-table-filter"
  data-test="ec-table-filter"
>
  <div
    class="ec-sync-multiple-values-filter ec-table-filter__filter-item"
    data-test="ec-table-filter__filter-item ec-table-filter__filter-item-0"
  >
    <div
      class="ec-filter-popover"
      data-test="ec-sync-multiple-values-filter__trigger"
    >
      <ec-stub
        data-test="ec-stub ec-popover-stub"
        offset="0, 8"
        placement="bottom"
        popper-options="[object Object]"
      >
        <div
          class="ec-filter-popover__trigger"
          data-test="ec-filter-popover__trigger"
        >
          <button
            class="ec-filter-popover__label"
            data-test="ec-filter-popover__label"
            title="Payment status"
            type="button"
          >
            Payment status
          </button>
           
          <!---->
           
          <svg
            class="ec-filter-popover__icon ec-icon ec-icon--interactive"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-chevron-down"
            />
          </svg>
        </div>
          
        <div
          class="ec-filter-popover__filter-content"
        >
          <div
            class="ec-multiple-values-selection"
            data-test="ec-multiple-values-selection"
          >
            <!---->
             
            <div>
              <!---->
                
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-1"
                    type="checkbox"
                  />
                   
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                    >
                      <!---->
                    </span>
                     
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-1"
                      title="Paid"
                    >
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <!---->
                         
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Paid
                        </span>
                      </div>
                    </label>
                  </div>
                   
                  <!---->
                </div>
              </li>
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-2"
                    type="checkbox"
                  />
                   
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                    >
                      <!---->
                    </span>
                     
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-2"
                      title="Cancelled"
                    >
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <!---->
                         
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Cancelled
                        </span>
                      </div>
                    </label>
                  </div>
                   
                  <!---->
                </div>
              </li>
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-3"
                    type="checkbox"
                  />
                   
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                    >
                      <!---->
                    </span>
                     
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-3"
                      title="Overdue"
                    >
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <!---->
                         
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Overdue
                        </span>
                      </div>
                    </label>
                  </div>
                   
                  <!---->
                </div>
              </li>
            </div>
          </div>
        </div>
      </ec-stub>
    </div>
  </div>
  <div
    class="ec-sync-multiple-values-filter ec-table-filter__filter-item"
    data-test="ec-table-filter__filter-item ec-table-filter__filter-item-1"
  >
    <div
      class="ec-filter-popover"
      data-test="ec-sync-multiple-values-filter__trigger"
    >
      <ec-stub
        data-test="ec-stub ec-popover-stub"
        offset="0, 8"
        placement="bottom"
        popper-options="[object Object]"
      >
        <div
          class="ec-filter-popover__trigger"
          data-test="ec-filter-popover__trigger"
        >
          <button
            class="ec-filter-popover__label"
            data-test="ec-filter-popover__label"
            title="Fee type"
            type="button"
          >
            Fee type
          </button>
           
          <!---->
           
          <svg
            class="ec-filter-popover__icon ec-icon ec-icon--interactive"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-chevron-down"
            />
          </svg>
        </div>
          
        <div
          class="ec-filter-popover__filter-content"
        >
          <div
            class="ec-multiple-values-selection"
            data-test="ec-multiple-values-selection"
          >
            <!---->
             
            <div>
              <!---->
                
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-4"
                    type="checkbox"
                  />
                   
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                    >
                      <!---->
                    </span>
                     
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-4"
                      title="Invoiced"
                    >
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <!---->
                         
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Invoiced
                        </span>
                      </div>
                    </label>
                  </div>
                   
                  <!---->
                </div>
              </li>
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-5"
                    type="checkbox"
                  />
                   
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                    >
                      <!---->
                    </span>
                     
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-5"
                      title="Other type"
                    >
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <!---->
                         
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Other type
                        </span>
                      </div>
                    </label>
                  </div>
                   
                  <!---->
                </div>
              </li>
            </div>
          </div>
        </div>
      </ec-stub>
    </div>
  </div>
  <div
    class="ec-filter-popover ec-table-filter__filter-item"
    data-test="ec-table-filter__filter-item ec-table-filter__filter-item-2"
  >
    <ec-stub
      data-test="ec-stub ec-popover-stub"
      offset="0, 8"
      placement="bottom"
      popper-options="[object Object]"
    >
      <div
        class="ec-filter-popover__trigger"
        data-test="ec-filter-popover__trigger"
      >
        <button
          class="ec-filter-popover__label"
          data-test="ec-filter-popover__label"
          title="Due date"
          type="button"
        >
          Due date
        </button>
         
        <!---->
         
        <svg
          class="ec-filter-popover__icon ec-icon ec-icon--interactive"
          height="16"
          width="16"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </div>
        
      <div
        class="ec-filter-popover__filter-content"
      >
        <div
          class="ec-date-range-filter"
          data-test="ec-date-range-filter"
        >
          <div
            class="ec-date-range-filter__inputs-wrapper"
          >
            <div
              class="ec-input-field ec-date-range-filter__from-input"
              data-test="ec-input-field"
            >
              <label
                class="ec-input-field__label"
                data-test="ec-input-field__label"
                for="ec-input-field-6"
              >
                <span
                  class="ec-input-field__label-text"
                  data-test="ec-input-field__label-text"
                >
                  From
                  <!---->
                </span>
                 
                <!---->
              </label>
               
              <input
                class="ec-input-field__input"
                data-test="ec-date-range-filter__from-input ec-input-field__input"
                id="ec-input-field-6"
                placeholder="dd/mm/yyyy"
                type="date"
              />
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="ec-input-field ec-date-range-filter__to-input"
              data-test="ec-input-field"
            >
              <label
                class="ec-input-field__label"
                data-test="ec-input-field__label"
                for="ec-input-field-7"
              >
                <span
                  class="ec-input-field__label-text"
                  data-test="ec-input-field__label-text"
                >
                  To
                  <!---->
                </span>
                 
                <!---->
              </label>
               
              <input
                class="ec-input-field__input"
                data-test="ec-date-range-filter__to-input ec-input-field__input"
                id="ec-input-field-7"
                placeholder="dd/mm/yyyy"
                type="date"
              />
               
              <!---->
               
              <!---->
            </div>
          </div>
           
          <!---->
           
          <button
            class="ec-date-range-filter__clear-button"
            data-test="ec-date-range-filter__clear-button"
            disabled="disabled"
            type="button"
          >
            Clear dates
          </button>
        </div>
      </div>
    </ec-stub>
  </div>
   
  <!---->
</section>
`;

exports[`EcTableFilter should render correctly if all the required props are passed 1`] = `
<section
  class="ec-table-filter"
  data-test="ec-table-filter"
>
  <div
    class="ec-sync-multiple-values-filter ec-table-filter__filter-item"
    data-test="ec-table-filter__filter-item ec-table-filter__filter-item-0"
  >
    <div
      class="ec-filter-popover"
      data-test="ec-sync-multiple-values-filter__trigger"
    >
      <ec-stub
        data-test="ec-stub ec-popover-stub"
        offset="0, 8"
        placement="bottom"
        popper-options="[object Object]"
      >
        <div
          class="ec-filter-popover__trigger"
          data-test="ec-filter-popover__trigger"
        >
          <button
            class="ec-filter-popover__label"
            data-test="ec-filter-popover__label"
            title="Payment status"
            type="button"
          >
            Payment status
          </button>
           
          <!---->
           
          <svg
            class="ec-filter-popover__icon ec-icon ec-icon--interactive"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-chevron-down"
            />
          </svg>
        </div>
          
        <div
          class="ec-filter-popover__filter-content"
        >
          <div
            class="ec-multiple-values-selection"
            data-test="ec-multiple-values-selection"
          >
            <!---->
             
            <div>
              <!---->
                
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-1"
                    type="checkbox"
                  />
                   
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                    >
                      <!---->
                    </span>
                     
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-1"
                      title="Paid"
                    >
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <!---->
                         
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Paid
                        </span>
                      </div>
                    </label>
                  </div>
                   
                  <!---->
                </div>
              </li>
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-2"
                    type="checkbox"
                  />
                   
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                    >
                      <!---->
                    </span>
                     
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-2"
                      title="Cancelled"
                    >
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <!---->
                         
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Cancelled
                        </span>
                      </div>
                    </label>
                  </div>
                   
                  <!---->
                </div>
              </li>
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-3"
                    type="checkbox"
                  />
                   
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                    >
                      <!---->
                    </span>
                     
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-3"
                      title="Overdue"
                    >
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <!---->
                         
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Overdue
                        </span>
                      </div>
                    </label>
                  </div>
                   
                  <!---->
                </div>
              </li>
            </div>
          </div>
        </div>
      </ec-stub>
    </div>
  </div>
  <div
    class="ec-sync-multiple-values-filter ec-table-filter__filter-item"
    data-test="ec-table-filter__filter-item ec-table-filter__filter-item-1"
  >
    <div
      class="ec-filter-popover"
      data-test="ec-sync-multiple-values-filter__trigger"
    >
      <ec-stub
        data-test="ec-stub ec-popover-stub"
        offset="0, 8"
        placement="bottom"
        popper-options="[object Object]"
      >
        <div
          class="ec-filter-popover__trigger"
          data-test="ec-filter-popover__trigger"
        >
          <button
            class="ec-filter-popover__label"
            data-test="ec-filter-popover__label"
            title="Fee type"
            type="button"
          >
            Fee type
          </button>
           
          <!---->
           
          <svg
            class="ec-filter-popover__icon ec-icon ec-icon--interactive"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-chevron-down"
            />
          </svg>
        </div>
          
        <div
          class="ec-filter-popover__filter-content"
        >
          <div
            class="ec-multiple-values-selection"
            data-test="ec-multiple-values-selection"
          >
            <!---->
             
            <div>
              <!---->
                
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-4"
                    type="checkbox"
                  />
                   
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                    >
                      <!---->
                    </span>
                     
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-4"
                      title="Invoiced"
                    >
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <!---->
                         
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Invoiced
                        </span>
                      </div>
                    </label>
                  </div>
                   
                  <!---->
                </div>
              </li>
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-5"
                    type="checkbox"
                  />
                   
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                    >
                      <!---->
                    </span>
                     
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-5"
                      title="Other type"
                    >
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <!---->
                         
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Other type
                        </span>
                      </div>
                    </label>
                  </div>
                   
                  <!---->
                </div>
              </li>
            </div>
          </div>
        </div>
      </ec-stub>
    </div>
  </div>
  <div
    class="ec-filter-popover ec-table-filter__filter-item"
    data-test="ec-table-filter__filter-item ec-table-filter__filter-item-2"
  >
    <ec-stub
      data-test="ec-stub ec-popover-stub"
      offset="0, 8"
      placement="bottom"
      popper-options="[object Object]"
    >
      <div
        class="ec-filter-popover__trigger"
        data-test="ec-filter-popover__trigger"
      >
        <button
          class="ec-filter-popover__label"
          data-test="ec-filter-popover__label"
          title="Due date"
          type="button"
        >
          Due date
        </button>
         
        <!---->
         
        <svg
          class="ec-filter-popover__icon ec-icon ec-icon--interactive"
          height="16"
          width="16"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </div>
        
      <div
        class="ec-filter-popover__filter-content"
      >
        <div
          class="ec-date-range-filter"
          data-test="ec-date-range-filter"
        >
          <div
            class="ec-date-range-filter__inputs-wrapper"
          >
            <div
              class="ec-input-field ec-date-range-filter__from-input"
              data-test="ec-input-field"
            >
              <label
                class="ec-input-field__label"
                data-test="ec-input-field__label"
                for="ec-input-field-6"
              >
                <span
                  class="ec-input-field__label-text"
                  data-test="ec-input-field__label-text"
                >
                  From
                  <!---->
                </span>
                 
                <!---->
              </label>
               
              <input
                class="ec-input-field__input"
                data-test="ec-date-range-filter__from-input ec-input-field__input"
                id="ec-input-field-6"
                placeholder="dd/mm/yyyy"
                type="date"
              />
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="ec-input-field ec-date-range-filter__to-input"
              data-test="ec-input-field"
            >
              <label
                class="ec-input-field__label"
                data-test="ec-input-field__label"
                for="ec-input-field-7"
              >
                <span
                  class="ec-input-field__label-text"
                  data-test="ec-input-field__label-text"
                >
                  To
                  <!---->
                </span>
                 
                <!---->
              </label>
               
              <input
                class="ec-input-field__input"
                data-test="ec-date-range-filter__to-input ec-input-field__input"
                id="ec-input-field-7"
                placeholder="dd/mm/yyyy"
                type="date"
              />
               
              <!---->
               
              <!---->
            </div>
          </div>
           
          <!---->
           
          <button
            class="ec-date-range-filter__clear-button"
            data-test="ec-date-range-filter__clear-button"
            disabled="disabled"
            type="button"
          >
            Clear dates
          </button>
        </div>
      </div>
    </ec-stub>
  </div>
   
  <!---->
</section>
`;

exports[`EcTableFilter should render with pre-selected filters if the value prop is passed 1`] = `
<section
  class="ec-table-filter"
  data-test="ec-table-filter"
>
  <div
    class="ec-sync-multiple-values-filter ec-table-filter__filter-item"
    data-test="ec-table-filter__filter-item ec-table-filter__filter-item-0"
  >
    <div
      class="ec-filter-popover"
      data-test="ec-sync-multiple-values-filter__trigger"
    >
      <ec-stub
        data-test="ec-stub ec-popover-stub"
        offset="0, 8"
        placement="bottom"
        popper-options="[object Object]"
      >
        <div
          class="ec-filter-popover__trigger"
          data-test="ec-filter-popover__trigger"
        >
          <button
            class="ec-filter-popover__label"
            data-test="ec-filter-popover__label"
            title="Payment status"
            type="button"
          >
            Payment status
          </button>
           
          <!---->
           
          <svg
            class="ec-filter-popover__icon ec-icon ec-icon--interactive"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-chevron-down"
            />
          </svg>
        </div>
          
        <div
          class="ec-filter-popover__filter-content"
        >
          <div
            class="ec-multiple-values-selection"
            data-test="ec-multiple-values-selection"
          >
            <!---->
             
            <div>
              <!---->
                
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-1"
                    type="checkbox"
                  />
                   
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                    >
                      <!---->
                    </span>
                     
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-1"
                      title="Paid"
                    >
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <!---->
                         
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Paid
                        </span>
                      </div>
                    </label>
                  </div>
                   
                  <!---->
                </div>
              </li>
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-2"
                    type="checkbox"
                  />
                   
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                    >
                      <!---->
                    </span>
                     
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-2"
                      title="Cancelled"
                    >
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <!---->
                         
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Cancelled
                        </span>
                      </div>
                    </label>
                  </div>
                   
                  <!---->
                </div>
              </li>
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-3"
                    type="checkbox"
                  />
                   
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                    >
                      <!---->
                    </span>
                     
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-3"
                      title="Overdue"
                    >
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <!---->
                         
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Overdue
                        </span>
                      </div>
                    </label>
                  </div>
                   
                  <!---->
                </div>
              </li>
            </div>
          </div>
        </div>
      </ec-stub>
    </div>
  </div>
  <div
    class="ec-sync-multiple-values-filter ec-table-filter__filter-item"
    data-test="ec-table-filter__filter-item ec-table-filter__filter-item-1"
  >
    <div
      class="ec-filter-popover"
      data-test="ec-sync-multiple-values-filter__trigger"
    >
      <ec-stub
        data-test="ec-stub ec-popover-stub"
        offset="0, 8"
        placement="bottom"
        popper-options="[object Object]"
      >
        <div
          class="ec-filter-popover__trigger"
          data-test="ec-filter-popover__trigger"
        >
          <button
            class="ec-filter-popover__label"
            data-test="ec-filter-popover__label"
            title="Fee type"
            type="button"
          >
            Fee type
          </button>
           
          <span
            class="ec-filter-popover__badge"
            data-test="ec-filter-popover__badge"
          >
             1
      
          </span>
           
          <svg
            class="ec-filter-popover__icon ec-icon ec-icon--interactive"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-chevron-down"
            />
          </svg>
        </div>
          
        <div
          class="ec-filter-popover__filter-content"
        >
          <div
            class="ec-multiple-values-selection"
            data-test="ec-multiple-values-selection"
          >
            <!---->
             
            <div>
              <!---->
               
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__checkbox-deselect"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-4"
                    type="checkbox"
                  />
                   
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--checked"
                    >
                      <svg
                        class="ec-checkbox__check-icon ec-icon"
                        height="16"
                        width="16"
                      >
                        <use
                          xlink:href="#ec-simple-check"
                        />
                      </svg>
                    </span>
                     
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-4"
                      title="Invoiced"
                    >
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <!---->
                         
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Invoiced
                        </span>
                      </div>
                    </label>
                  </div>
                   
                  <!---->
                </div>
              </li>
               
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-5"
                    type="checkbox"
                  />
                   
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                    >
                      <!---->
                    </span>
                     
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-5"
                      title="Other type"
                    >
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <!---->
                         
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Other type
                        </span>
                      </div>
                    </label>
                  </div>
                   
                  <!---->
                </div>
              </li>
            </div>
          </div>
        </div>
      </ec-stub>
    </div>
  </div>
  <div
    class="ec-filter-popover ec-table-filter__filter-item"
    data-test="ec-table-filter__filter-item ec-table-filter__filter-item-2"
  >
    <ec-stub
      data-test="ec-stub ec-popover-stub"
      offset="0, 8"
      placement="bottom"
      popper-options="[object Object]"
    >
      <div
        class="ec-filter-popover__trigger"
        data-test="ec-filter-popover__trigger"
      >
        <button
          class="ec-filter-popover__label"
          data-test="ec-filter-popover__label"
          title="Due date"
          type="button"
        >
          Due date
        </button>
         
        <!---->
         
        <svg
          class="ec-filter-popover__icon ec-icon ec-icon--interactive"
          height="16"
          width="16"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </div>
        
      <div
        class="ec-filter-popover__filter-content"
      >
        <div
          class="ec-date-range-filter"
          data-test="ec-date-range-filter"
        >
          <div
            class="ec-date-range-filter__inputs-wrapper"
          >
            <div
              class="ec-input-field ec-date-range-filter__from-input"
              data-test="ec-input-field"
            >
              <label
                class="ec-input-field__label"
                data-test="ec-input-field__label"
                for="ec-input-field-6"
              >
                <span
                  class="ec-input-field__label-text"
                  data-test="ec-input-field__label-text"
                >
                  From
                  <!---->
                </span>
                 
                <!---->
              </label>
               
              <input
                class="ec-input-field__input"
                data-test="ec-date-range-filter__from-input ec-input-field__input"
                id="ec-input-field-6"
                placeholder="dd/mm/yyyy"
                type="date"
              />
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="ec-input-field ec-date-range-filter__to-input"
              data-test="ec-input-field"
            >
              <label
                class="ec-input-field__label"
                data-test="ec-input-field__label"
                for="ec-input-field-7"
              >
                <span
                  class="ec-input-field__label-text"
                  data-test="ec-input-field__label-text"
                >
                  To
                  <!---->
                </span>
                 
                <!---->
              </label>
               
              <input
                class="ec-input-field__input"
                data-test="ec-date-range-filter__to-input ec-input-field__input"
                id="ec-input-field-7"
                placeholder="dd/mm/yyyy"
                type="date"
              />
               
              <!---->
               
              <!---->
            </div>
          </div>
           
          <!---->
           
          <button
            class="ec-date-range-filter__clear-button"
            data-test="ec-date-range-filter__clear-button"
            disabled="disabled"
            type="button"
          >
            Clear dates
          </button>
        </div>
      </div>
    </ec-stub>
  </div>
   
  <button
    class="ec-table-filter__clear-filters-button"
    data-test="ec-table-filter__clear-filters-button"
    type="button"
  >
    
    Clear filters
  
  </button>
</section>
`;
